data/derived/comb/progs/unify/prog2864.ml.out
Characters 60-61:
  |h::t -> h::l listReverse(t);;
              ^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
